新的页面，新的我

--- a/src/main/resources/templates/webapp/cart.html
+++ b/src/main/resources/templates/webapp/cart.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 <!--------------------------------------cart--------------------->
+<th:block th:include="webapp/link::link"></th:block>
 <div class="head ding">
     <div class="wrapper clearfix">
         <div class="clearfix" id="top">
-            <h1 class="fl"><a href="index.html"><img src="img/logo.png"/></a></h1>
+            <h1 class="fl"><a href="index.html"><img src="/img/logo.png"/></a></h1>
             <div class="fr clearfix" id="top1">
                 <p class="fl">
                     <a href="login.html" id="login">登录</a>
@@ -22,10 +23,10 @@
                     <input type="button"/>
                 </form>
                 <div class="btn fl clearfix">
-                    <a href="mygxin.html"><img src="img/grzx.png"/></a>
-                    <a href="#" class="er1"><img src="img/ewm.png"/></a>
-                    <a href="cart.html"><img src="img/gwc.png"/></a>
-                    <p><a href="#"><img src="img/smewm.png"/></a></p>
+                    <a href="mygxin.html"><img src="/img/grzx.png"/></a>
+                    <a href="#" class="er1"><img src="/img/ewm.png"/></a>
+                    <a href="cart.html"><img src="/img/gwc.png"/></a>
+                    <p><a href="#"><img src="/img/smewm.png"/></a></p>
                 </div>
             </div>
         </div>
@@ -51,12 +52,13 @@
     <div class="site">
         <p class=" wrapper clearfix">
             <span class="fl">购物车</span>
-            <img class="top" src="img/temp/cartTop01.png">
+            <img class="top" src="/img/temp/cartTop01.png">
             <a href="index.html" class="fr">继续购物&gt;</a>
         </p>
     </div>
     <!-----------------table------------------->
     <div class="table wrapper">
+        <form id="form">
         <div class="tr">
             <div>商品</div>
             <div >单价</div>
@@ -64,168 +66,42 @@
             <div>小计</div>
             <div>操作</div>
         </div>
-        <div class="th">
+        <!-- each-->
+        <div class="th" th:if="${page.total} > 0" th:each="cart: ${page.records}">
             <div class="pro clearfix">
                 <label class="fl">
-                    <input type="checkbox"/>
+                    <input type="checkbox" name="cartId" th:value="${cart.cartId}"/>
                     <span></span>
                 </label>
                 <a class="fl" href="#">
                     <dl class="clearfix">
-                        <dt class="fl"><img src="img/temp/cart01.jpg"></dt>
+                        <dt class="fl"><img th:src="${cart.commodity.commodityPicture}" width="100px"></dt>
                         <dd class="fl">
-                            <p>创意现代简约干花花瓶摆件</p>
+                            <p th:text="${cart.commodity.commodityName}"></p>
                         </dd>
                     </dl>
                 </a>
             </div>
-            <div class="price">￥20.00</div>
+            <div class="price" th:text="${'￥'+cart.commodity.price}"></div>
             <div class="number">
                 <p class="num clearfix">
-                    <img class="fl sub" src="img/temp/sub.jpg">
-                    <span class="fl">1</span>
-                    <img class="fl add" src="img/temp/add.jpg">
+                    <span class="fl" th:text="${cart.number}"></span>
                 </p>
             </div>
-            <div class="price sAll">￥20.00</div>
+            <div class="price sAll" th:text="${'￥'+cart.cartPrices}"></div>
             <div class="price"><a class="del" href="#2">删除</a></div>
         </div>
-        <div class="th">
-            <div class="pro clearfix">
-                <label class="fl">
-                    <input type="checkbox"/>
-                    <span></span>
-                </label>
-                <a class="fl" href="#">
-                    <dl class="clearfix">
-                        <dt class="fl"><img src="img/temp/cart02.jpg"></dt>
-                        <dd class="fl">
-                            <p>创意现代简约干花花瓶摆件</p>
 
-                        </dd>
-                    </dl>
-                </a>
-            </div>
-            <div class="price">￥30.00</div>
-            <div class="number">
-                <p class="num clearfix">
-                    <img class="fl sub" src="img/temp/sub.jpg">
-                    <span class="fl">1</span>
-                    <img class="fl add" src="img/temp/add.jpg">
-                </p>
-            </div>
-            <div class="price sAll">￥30.00</div>
-            <div class="price"><a class="del" href="#2">删除</a></div>
+        <div th:if="${page.total} < 0">
+            <div class="goOn">空空如也~<a href="index.html">去逛逛</a></div>
         </div>
-        <div class="th">
-            <div class="pro clearfix">
-                <label class="fl">
-                    <input type="checkbox"/>
-                    <span></span>
-                </label>
-                <a class="fl" href="#">
-                    <dl class="clearfix">
-                        <dt class="fl"><img src="img/temp/cart03.jpg"></dt>
-                        <dd class="fl">
-                            <p>创意现代简约干花花瓶摆件</p>
+        <!---->
 
-                        </dd>
-                    </dl>
-                </a>
-            </div>
-            <div class="price">￥59.99</div>
-            <div class="number">
-                <p class="num clearfix">
-                    <img class="fl sub" src="img/temp/sub.jpg">
-                    <span class="fl">1</span>
-                    <img class="fl add" src="img/temp/add.jpg">
-                </p>
-            </div>
-            <div class="price sAll">￥59.99</div>
-            <div class="price"><a class="del" href="#2">删除</a></div>
-        </div>
-        <div class="th">
-            <div class="pro clearfix">
-                <label class="fl">
-                    <input type="checkbox"/>
-                    <span></span>
-                </label>
-                <a class="fl" href="#">
-                    <dl class="clearfix">
-                        <dt class="fl"><img src="img/temp/cart01.jpg"></dt>
-                        <dd class="fl">
-                            <p>创意现代简约干花花瓶摆件</p>
+        <!--page-->
+        <div id="test1"></div>
+        <!--page-->
+        </form>
 
-                        </dd>
-                    </dl>
-                </a>
-            </div>
-            <div class="price">￥20.00</div>
-            <div class="number">
-                <p class="num clearfix">
-                    <img class="fl sub" src="img/temp/sub.jpg">
-                    <span class="fl">1</span>
-                    <img class="fl add" src="img/temp/add.jpg">
-                </p>
-            </div>
-            <div class="price sAll">￥20.00</div>
-            <div class="price"><a class="del" href="#2">删除</a></div>
-        </div>
-        <div class="th">
-            <div class="pro clearfix">
-                <label class="fl">
-                    <input type="checkbox"/>
-                    <span></span>
-                </label>
-                <a class="fl" href="#">
-                    <dl class="clearfix">
-                        <dt class="fl"><img src="img/temp/cart02.jpg"></dt>
-                        <dd class="fl">
-                            <p>创意现代简约干花花瓶摆件</p>
-
-                        </dd>
-                    </dl>
-                </a>
-            </div>
-            <div class="price">￥30.00</div>
-            <div class="number">
-                <p class="num clearfix">
-                    <img class="fl sub" src="img/temp/sub.jpg">
-                    <span class="fl">1</span>
-                    <img class="fl add" src="img/temp/add.jpg">
-                </p>
-            </div>
-            <div class="price sAll">￥30.00</div>
-            <div class="price"><a class="del" href="#2">删除</a></div>
-        </div>
-        <div class="th">
-            <div class="pro clearfix">
-                <label class="fl">
-                    <input type="checkbox"/>
-                    <span></span>
-                </label>
-                <a class="fl" href="#">
-                    <dl class="clearfix">
-                        <dt class="fl"><img src="img/temp/cart03.jpg"></dt>
-                        <dd class="fl">
-                            <p>创意现代简约干花花瓶摆件</p>
-
-                        </dd>
-                    </dl>
-                </a>
-            </div>
-            <div class="price">￥59.99</div>
-            <div class="number">
-                <p class="num clearfix">
-                    <img class="fl sub" src="img/temp/sub.jpg">
-                    <span class="fl">1</span>
-                    <img class="fl add" src="img/temp/add.jpg">
-                </p>
-            </div>
-            <div class="price sAll">￥59.99</div>
-            <div class="price"><a class="del" href="#2">删除</a></div>
-        </div>
-        <div class="goOn">空空如也~<a href="index.html">去逛逛</a></div>
         <div class="tr clearfix">
             <label class="fl">
                 <input class="checkAll" type="checkbox"/>
@@ -238,113 +114,77 @@
             <p class="fr">
 
                 <span>合计:&nbsp;<small id="all">￥0.00</small></span>
-                <a href="order.html" class="count">结算</a>
+                <a onclick="pay()" class="count">结算</a>
             </p>
         </div>
     </div>
 </div>
-<div class="mask"></div>
-<div class="tipDel">
-    <p>确定要删除该商品吗？</p>
-    <p class="clearfix">
-        <a class="fl cer" href="#">确定</a>
-        <a class="fr cancel" href="#">取消</a>
-    </p>
-</div>
 <!--返回顶部-->
-<div class="gotop">
-    <a href="cart.html">
-        <dl>
-            <dt><img src="img/gt1.png"/></dt>
-            <dd>去购<br/>物车</dd>
-        </dl>
-    </a>
-    <a href="#" class="dh">
-        <dl>
-            <dt><img src="img/gt2.png"/></dt>
-            <dd>联系<br/>客服</dd>
-        </dl>
-    </a>
-    <a href="mygxin.html">
-        <dl>
-            <dt><img src="img/gt3.png"/></dt>
-            <dd>个人<br/>中心</dd>
-        </dl>
-    </a>
-    <a href="#" class="toptop" style="display: none;">
-        <dl>
-            <dt><img src="img/gt4.png"/></dt>
-            <dd>返回<br/>顶部</dd>
-        </dl>
-    </a>
-    <p>400-800-8200</p>
-</div>
+<th:block th:replace="webapp/gotop::gotop"></th:block>
 <!--footer-->
-<div class="footer">
-    <div class="top">
-        <div class="wrapper">
-            <div class="clearfix">
-                <a href="#2" class="fl"><img src="img/foot1.png"/></a>
-                <span class="fl">7天无理由退货</span>
-            </div>
-            <div class="clearfix">
-                <a href="#2" class="fl"><img src="img/foot2.png"/></a>
-                <span class="fl">15天免费换货</span>
-            </div>
-            <div class="clearfix">
-                <a href="#2" class="fl"><img src="img/foot3.png"/></a>
-                <span class="fl">满599包邮</span>
-            </div>
-            <div class="clearfix">
-                <a href="#2" class="fl"><img src="img/foot4.png"/></a>
-                <span class="fl">手机特色服务</span>
-            </div>
-        </div>
-    </div>
-    <p class="dibu">雅阁家居&copy;2013-2017公司版权所有 京ICP备080100-44备0000111000号<br/>
-        违法和不良信息举报电话：188-0130-1238，本网站所列数据，除特殊说明，所有数据均出自我司实验室测试</p>
-</div>
+<th:block th:replace="webapp/gotop::footer"></th:block>
 <!----------------mask------------------->
-<div class="mask"></div>
 <!-------------------mask内容------------------->
-<div class="proDets">
-    <img class="off" src="img/temp/off.jpg"/>
-    <div class="proCon clearfix">
-        <div class="proImg fr">
-            <img class="list" src="img/temp/proDet.jpg"/>
-            <div class="smallImg clearfix">
-                <img src="img/temp/proDet01.jpg" data-src="img/temp/proDet01_big.jpg">
-                <img src="img/temp/proDet02.jpg" data-src="img/temp/proDet02_big.jpg">
-                <img src="img/temp/proDet03.jpg" data-src="img/temp/proDet03_big.jpg">
-                <img src="img/temp/proDet04.jpg" data-src="img/temp/proDet04_big.jpg">
-            </div>
-        </div>
-        <div class="fl">
-            <div class="proIntro change">
-                <p>颜色分类</p>
-                <div class="smallImg clearfix">
-                    <p class="fl on"><img src="img/temp/prosmall01.jpg" alt="白瓷花瓶+20支快乐花"
-                                          data-src="img/temp/proBig01.jpg"></p>
-                    <p class="fl"><img src="img/temp/prosmall02.jpg" alt="白瓷花瓶+20支兔尾巴草"
-                                       data-src="img/temp/proBig02.jpg"></p>
-                    <p class="fl"><img src="img/temp/prosmall03.jpg" alt="20支快乐花" data-src="img/temp/proBig03.jpg"></p>
-                    <p class="fl"><img src="img/temp/prosmall04.jpg" alt="20支兔尾巴草" data-src="img/temp/proBig04.jpg"></p>
-                </div>
-            </div>
-            <div class="changeBtn clearfix">
-                <a href="#2" class="fl"><p class="buy">确认</p></a>
-                <a href="#2" class="fr"><p class="cart">取消</p></a>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="pleaseC">
-    <p>请选择宝贝</p>
-    <img class="off" src="img/temp/off.jpg"/>
-</div>
-<script src="js/jquery-1.12.4.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/public.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/pro.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/cart.js" type="text/javascript" charset="utf-8"></script>
+<script src="/js/jquery-1.12.4.min.js" type="text/javascript" charset="utf-8" ></script>
+<script src="/js/public.js" type="text/javascript" charset="utf-8"></script>
+<script src="/js/pro.js" type="text/javascript" charset="utf-8"></script>
+<script src="/js/cart.js" type="text/javascript" charset="utf-8"></script>
+<script>
+    layui.use('layer', function(){
+        var layer = layui.layer;
+    });
+    layui.use('laypage', function(){
+        var laypage = layui.laypage;
+        //执行一个laypage实例
+        laypage.render({
+            elem: 'test1' //注意，这里的 test1 是 ID，不用加 # 号
+            ,count: [[${page.total}]] //数据总数，从服务端得到
+            ,theme: '#aaa'
+            ,jump: function(obj, first){
+                //obj包含了当前分页的所有参数，比如：
+                console.log(obj.curr); //得到当前页，以便向服务端请求对应页的数据。
+                console.log(obj.limit); //得到每页显示的条数
+                //首次不执行
+                if(!first){
+                    //do something
+                    $.ajax(
+                        {
+                            url:"/user/layout",
+                            type:"POST",
+                            dataType:"json",
+                            data:{
+                                page: obj.curr+1,
+                                size: obj.limit,
+                                userid:[[${#session.getAttribute('user_session').userId}]]
+                            },
+                            success:function (result) {
+                                if(result.errorCode == 'success'){
+                                    console.log(result)
+
+                                    // layer.alert(result.msg, {icon: 6},function () {
+                                    //     window.location.href = "/";
+                                    // });
+                                }
+                                if(result.errorCode == 'fail'){
+                                    layer.alert(result.msg, {icon: 5});
+                                }
+                            }
+                        }
+                    )
+                }
+            }
+        });
+    });
+
+    function pay() {
+        var data =$('#form').serialize();
+        if( data== ""){
+            layer.alert('还没有选择购物车', {icon: 5});
+            return;
+        }
+       window.location.href = '/order/pay?'+data;
+    }
+
+</script>
 </body>
 </html>
