--- a/src/main/resources/templates/webapp/address.html
+++ b/src/main/resources/templates/webapp/address.html
@@ -7,46 +7,17 @@
 		<link rel="stylesheet" type="text/css" href="../css/mygxin.css" />
 	</head>
 	<body>
+	<th:block th:include="webapp/link::link"></th:block>
 		<!------------------------------head------------------------------>
-		<div class="head ding">
-			<div class="wrapper clearfix">
-				<div class="clearfix" id="top">
-					<h1 class="fl"><a href="index.html"><img src="img/logo.png"/></a></h1>
-					<div class="fr clearfix" id="top1">
-						<p class="fl">
-							<a href="login.html" id="login">登录</a>
-							<a href="reg.html" id="reg">注册</a>
-						</p>
-						<form action="#" method="get" class="fl">
-							<input type="text" placeholder="搜索" />
-							<input type="button" />
-						</form>
-						<div class="btn fl clearfix">
-							<a href="mygxin.html"><img src="img/grzx.png"/></a>
-							<a href="#" class="er1"><img src="img/ewm.png"/></a>
-							<a href="cart.html"><img src="img/gwc.png"/></a>
-							<p><a href="#"><img src="img/smewm.png"/></a></p>
-						</div>
-					</div>
-				</div>
-				<ul class="clearfix" id="bott">
-					<li><a href="index.html">首页</a></li>
-					<li><a href="flowerDer.html">装饰摆件</a></li>
-					<li><a href="decoration.html">布艺软饰</a></li>
-					<li><a href="paint.html">墙式壁挂</a></li>
-					<li><a href="perfume.html">蜡艺香薰</a></li>
-					<li><a href="idea.html">创意家居</a></li>
-				</ul>
-			</div>
-		</div>
+		<th:block th:include="webapp/head::userhead"></th:block>
 		<!------------------------------idea------------------------------>
 		<div class="address mt">
 			<div class="wrapper clearfix">
-				<a href="index.html" class="fl">首页</a>
+				<a href="/" class="fl">首页</a>
 				<span>/</span>
-				<a href="mygxin.html">个人中心</a>
+				<a href="/user/index">个人中心</a>
 				<span>/</span>
-				<a href="address.html" class="on">地址管理</a>
+				<a href="/user/address" class="on">地址管理</a>
 			</div>
 		</div>
 		
@@ -55,8 +26,8 @@
 			<div class="wrapper clearfix">
 				<div class="zuo fl">
 					<h3>
-						<a href="#"><img src="img/tx.png"/></a>
-						<p class="clearfix"><span class="fl">[羊羊羊]</span><span class="fr">[退出登录]</span></p>
+						<a href="#"><img src="/img/tx.png"/></a>
+						<p class="clearfix"><span class="fl" th:text="${'['+#session.getAttribute('user_session').userName}+']'"></span><span class="fr">[退出登录]</span></p>
 					</h3>
 					<div>
 						<h4>我的交易</h4>
@@ -67,8 +38,8 @@
 						</ul>
 						<h4>个人中心</h4>
 						<ul>
-							<li><a href="mygxin.html">我的中心</a></li>
-							<li class="on"><a href="address.html">地址管理</a></li>
+							<li ><a href="/user/index">我的中心</a></li>
+							<li class="on"><a href="/user/address">地址管理</a></li>
 						</ul>
 						<h4>账户管理</h4>
 						<ul>
@@ -81,125 +52,266 @@
 					<h2>收货地址</h2>
 					<div class="add">
 						<div>
-							<a href="#2" id="addxad"><img src="img/jia.png"/></a>
+							<a href="javascript:void(0)" onclick="addAddress()" id="addxads"><img src="/img/jia.png"/></a>
 							<span>添加新地址</span>
 						</div>
-						<div id="dizhi">
-							<p>六六六</p>
-							<p>1573****666</p>
-							<p>河北省 唐山市 路北区</p>
-							<p>唐山市大学生公寓村（063000）</p>
-						</div>
-					</div>		
-				</div>
+ 					</div>
+
+                    <!--address-->
+                    <div class="layui-col-md4" th:each="address: ${addresss}">
+                        <div id="dizhi1" style="border: 1px #CCCCCC solid;text-align: left;padding: 10px;margin:10px"  >
+                            <p th:text="${address.addressName}">六六六</p>
+                            <p th:text="${address.addressTelephone}">1573****666</p>
+                            <p th:text="${address.receiverProvince}+' '+${address.receiverCity}+' '+${address.receiverDistrict}">河北省 唐山市 路北区</p>
+                            <p th:text="${address.address}">唐山市大学生公寓村（063000）</p>
+                            <a th:onclick="update([[${address}]])">修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<a th:onclick="delectAddress([[${address.addressId}]])">删除</a>
+                        </div>
+                    </div>
+                    <!--address-->
+                </div>
 			</div>
 		</div>
 		<!--编辑弹框-->
 		<!--遮罩-->
 		<div class="mask"></div>
-		<div class="adddz">
-			<form action="#" method="get">
-				<input type="text" placeholder="姓名" class="on" />
-				<input type="text" placeholder="手机号" />
-				<div class="city">
-					<select name="">
-						<option value="省份/自治区">省份/自治区</option>
-					</select>
-					<select>
-						<option value="城市/地区">城市/地区</option>
-					</select>
-					<select>
-						<option value="区/县">区/县</option>
-					</select>
+		<!--layui 表单-->
+		<div id="dis" style="display:none">
+			<form class="layui-form" action="" id="formaddress">
+				<div class="layui-form-item">
+					<label class="layui-form-label">姓名</label>
+					<div class="layui-input-inline">
+						<input type="text" name="username"  required  lay-verify="required" placeholder="姓名" autocomplete="off" class="layui-input">
+					</div>
 				</div>
-				<textarea name="" rows="" cols="" placeholder="详细地址"></textarea>
-				<input type="text" placeholder="邮政编码" />
-				<div class="bc">
-					<input type="button" value="保存" />
-					<input type="button" value="取消" />
+				<div class="layui-form-item">
+					<label class="layui-form-label">手机号</label>
+					<div class="layui-input-inline">
+						<input type="text" name="telephone" required lay-verify="required" placeholder="手机号码" autocomplete="off" class="layui-input">
+					</div>
 				</div>
-			</form>
-		</div>
-		<div class="readd">
-			<form action="#" method="get">
-				<input type="text"  class="on" value="六六六" />
-				<input type="text" value="157****0022" />
-				<div class="city">
-					<select name="">
-						<option value="省份/自治区">河北省</option>
-					</select>
-					<select>
-						<option value="城市/地区">唐山市</option>
-					</select>
-					<select>
-						<option value="区/县">路北区</option>
-					</select>
+				<div class="layui-form-item" id="area-picker">
+					<div class="layui-form-label">详细地址</div>
+					<div class="layui-input-inline" style="width: 200px;">
+						<select name="province" class="province-selector" data-value="广东省" lay-filter="province-1">
+							<option value="">请选择省</option>
+						</select>
+					</div>
+					<div class="layui-input-inline" style="width: 200px;">
+						<select name="city" class="city-selector" data-value="深圳市" lay-filter="city-1">
+							<option value="">请选择市</option>
+						</select>
+					</div>
+					<div class="layui-input-inline" style="width: 200px;">
+						<select name="county" class="county-selector" data-value="龙岗区" lay-filter="county-1">
+							<option value="">请选择区</option>
+						</select>
+					</div>
 				</div>
-				<textarea name="" rows="" cols="" placeholder="详细地址">高新产业园</textarea>
-				<input type="text" placeholder="邮政编码" value="063000"/>
-				<div class="bc">
-					<input type="button" value="保存" />
-					<input type="button" value="取消" />
+				<div class="layui-form-item">
+					<label class="layui-form-label">邮政编码</label>
+					<div class="layui-input-inline">
+						<input type="text" name="postal" required lay-verify="required" placeholder="邮政编码" autocomplete="off" class="layui-input">
+					</div>
+				</div>
+				<div class="layui-form-item layui-form-text" style="width: 500px;">
+					<label class="layui-form-label">详细地址</label>
+					<div class="layui-input-block">
+						<textarea name="address" placeholder="请输入详细地址" class="layui-textarea"></textarea>
+					</div>
 				</div>
 			</form>
 		</div>
 		<!--返回顶部-->
-		<div class="gotop">
-			<a href="cart.html">
-			<dl>
-				<dt><img src="img/gt1.png"/></dt>
-				<dd>去购<br />物车</dd>
-			</dl>
-			</a>
-			<a href="#" class="dh">
-			<dl>
-				<dt><img src="img/gt2.png"/></dt>
-				<dd>联系<br />客服</dd>
-			</dl>
-			</a>
-			<a href="mygxin.html">
-			<dl>
-				<dt><img src="img/gt3.png"/></dt>
-				<dd>个人<br />中心</dd>
-			</dl>
-			</a>
-			<a href="#" class="toptop" style="display: none">
-			<dl>
-				<dt><img src="img/gt4.png"/></dt>
-				<dd>返回<br />顶部</dd>
-			</dl>
-			</a>
-			<p>400-800-8200</p>
-		</div>
-		
-		
+		<th:block th:replace="webapp/gotop::gotop"></th:block>
+
 		<!--footer-->
-		<div class="footer">
-			<div class="top">
-				<div class="wrapper">
-					<div class="clearfix">
-						<a href="#2" class="fl"><img src="img/foot1.png"/></a>
-						<span class="fl">7天无理由退货</span>
-					</div>
-					<div class="clearfix">
-						<a href="#2" class="fl"><img src="img/foot2.png"/></a>
-						<span class="fl">15天免费换货</span>
-					</div>
-					<div class="clearfix">
-						<a href="#2" class="fl"><img src="img/foot3.png"/></a>
-						<span class="fl">满599包邮</span>
-					</div>
-					<div class="clearfix">
-						<a href="#2" class="fl"><img src="img/foot4.png"/></a>
-						<span class="fl">手机特色服务</span>
-					</div>
-				</div>
-			</div>
-			<p class="dibu">雅阁家居&copy;2013-2017公司版权所有 京ICP备080100-44备0000111000号<br />
-			违法和不良信息举报电话：400-800-8200，本网站所列数据，除特殊说明，所有数据均出自我司实验室测试</p>
-		</div>
-		<script src="js/jquery-1.12.4.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/public.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/user.js" type="text/javascript" charset="utf-8"></script>
+		<th:block th:replace="webapp/gotop::footer"></th:block>
+		<script src="http://static.runoob.com/assets/jquery-validation-1.14.0/dist/jquery.validate.min.js"></script>
+	<script>
+			//一般直接写在一个js文件中
+			layui.use(['layer','element'], function(){
+				var layer = layui.layer;
+                var element = layui.element;
+			});
+
+			layui.config({
+				base: '/js/mods/'
+				, version: '1.0'
+			});
+		</script>
+		<script>
+			function address(ajax) {
+				layui.use(['layer', 'form', 'layarea'], function(){
+					var form = layui.form;
+					var layarea = layui.layarea;
+
+					layarea.render({
+						elem: '#area-picker',
+						data: {
+							province: '广东省',
+							city: '深圳市',
+							county: '龙岗区',
+						},
+						change: function (res) {
+							//选择结果
+							console.log(res);
+						}
+					});
+
+					//监听提交
+					form.on('submit(formDemo)', function(data){
+						layer.msg(JSON.stringify(data.field));
+						return false;
+					});
+				});
+
+
+			/**
+				 *
+				 0: {name: "username", value: ""}
+				 1: {name: "telephone", value: ""}
+				 2: {name: "province", value: "广东省"}
+				 3: {name: "city", value: "深圳市"}
+				 4: {name: "county", value: "龙岗区"}
+				 5: {name: "postal", value: ""}
+				 6：{name: "address", value: ""}
+				 */
+				layer.open({
+					type: 1
+					,title:"保存联系人"
+					,area:['56%','66%']
+					,btn: ['确定', '取消']
+					,content: $('#dis')
+					,  yes: function(index, layero){
+						//表单验证
+						var arr = $('#formaddress').serializeArray()
+						console.log(arr)
+						if(arr[0].value.length < 2  || arr[0].value.length > 20){
+							layer.alert("用户名不能小于2个或者大于20个", {icon: 5});
+							return;
+						}
+						var reg = /^1([358][0-9]|4[579]|66|7[0135678]|9[89])[0-9]{8}$/;
+						if(!reg.test(arr[1].value)){
+							layer.alert("电话号码格式不正确", {icon: 5});
+							return;
+						}
+						var reg2 = /^[1-9][0-9]{5}$/;
+						if(!reg2.test(arr[5].value)){
+							layer.alert("邮政编码格式不正确", {icon: 5});
+							return;
+						}
+						if(arr[6].value == ""){
+							layer.alert("详细地址不能为空", {icon: 5});
+							return;
+						}
+						if(arr[6].value.length >= 30){
+							layer.alert("详细地址太长了", {icon: 5});
+							return;
+						}
+
+						console.log($("#formaddress").serialize())
+						$.ajax(
+								{
+									url:ajax.url,
+									type:"POST",
+									dataType:"json",
+									data:$("#formaddress").serialize()+"&userId=[[${#session.getAttribute('user_session').userId}]]"+ajax.data,
+									success:function (result) {
+										if(result.errorCode == 'success'){
+											layer.alert(result.msg, {icon: 6},function () {
+												//刷新
+												window.location.reload();
+											});
+										}
+										if(result.errorCode == 'fail'){
+											layer.alert(result.msg, {icon: 5});
+										}
+									}
+								}
+						)
+					},
+					btn2: function(index, layero){
+						//按钮【按钮二】的回调
+						//清空内容
+						clear();
+					},
+					cancel :function () {
+						//清空内容
+						clear();
+					}
+
+				});
+			}
+			function update(form,userId) {
+                /*
+		  	address: "湖南科技职业学院暮云校区"
+			addressId: 10005
+			addressName: "老四"
+			addressTelephone: "18512345678"
+			postalCode: "419500"
+			receiverCity: "长沙市"
+			receiverDistrict: "天心区"
+			receiverProvince: "湖南省"
+			userId: 20
+				 */
+                $("input[name=username]").val(form.addressName)
+				$("input[name=telephone]").val(form.addressTelephone)
+				// // $("select[name=province]").attr('data-value',form.receiverProvince)
+				// // $("select[name=city]").attr('data-value',form.receiverCity)
+				// // $("select[name=county]").attr('data-value',form.receiverDistrict)
+				$("input[name=postal]").val(form.postalCode)
+				$("textarea[name=address]").val(form.address)
+				address({
+					url:"/address/update",
+					data:"&addresId="+form.addressId,
+				});
+
+            }
+			
+            function clear() {
+				$("input[name=username]").val("")
+				$("input[name=telephone]").val("")
+				$("input[name=postal]").val("")
+				$("textarea[name=address]").val("")
+			}
+
+            function addAddress() {
+				address({
+					url:"/address/add",
+					data:""
+				})
+			}
+			
+			function delectAddress(id) {
+				layer.confirm('是否要删除联系人?', {icon: 3, title:'提示'}, function(index){
+					//do something
+					//删除联系人
+					$.ajax(
+							{
+								url:"/address/delete",
+								type:"POST",
+								dataType:"json",
+								data:{
+									addressId:id
+								},
+								success:function (result) {
+									if(result.errorCode == 'success'){
+										layer.alert(result.msg, {icon: 6},function () {
+											//刷新
+											window.location.reload();
+										});
+									}
+									if(result.errorCode == 'fail'){
+										layer.alert(result.msg, {icon: 5});
+									}
+								}
+							}
+					);
+					layer.close(index);
+				});
+			}
+            
+
+		</script>
 	</body>
 </html>
