--- a/src/main/resources/templates/webapp/order.html
+++ b/src/main/resources/templates/webapp/order.html
@@ -3,16 +3,17 @@
 <head lang="en">
     <meta charset="utf-8"/>
     <title>order</title>
-    <link rel="stylesheet" type="text/css" href="css/public.css"/>
-    <link rel="stylesheet" type="text/css" href="css/proList.css"/>
-    <link rel="stylesheet" type="text/css" href="css/mygxin.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/public.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/proList.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/mygxin.css"/>
 </head>
 <body>
 <!----------------------------------------order------------------>
+<th:block th:include="webapp/link::link"></th:block>
 <div class="head ding">
     <div class="wrapper clearfix">
         <div class="clearfix" id="top">
-            <h1 class="fl"><a href="index.html"><img src="img/logo.png"/></a></h1>
+            <h1 class="fl"><a href="index.html"><img src="/img/logo.png"/></a></h1>
             <div class="fr clearfix" id="top1">
                 <p class="fl">
                     <a href="#" id="login">登录</a>
@@ -23,10 +24,10 @@
                     <input type="button"/>
                 </form>
                 <div class="btn fl clearfix">
-                    <a href="mygxin.html"><img src="img/grzx.png"/></a>
-                    <a href="#" class="er1"><img src="img/ewm.png"/></a>
-                    <a href="cart.html"><img src="img/gwc.png"/></a>
-                    <p><a href="#"><img src="img/smewm.png"/></a></p>
+                    <a href="mygxin.html"><img src="/img/grzx.png"/></a>
+                    <a href="#" class="er1"><img src="/img/ewm.png"/></a>
+                    <a href="cart.html"><img src="/img/gwc.png"/></a>
+                    <p><a href="#"><img src="/img/smewm.png"/></a></p>
                 </div>
             </div>
         </div>
@@ -45,63 +46,34 @@
     <div class="site">
         <p class="wrapper clearfix">
             <span class="fl">订单确认</span>
-            <img class="top" src="img/temp/cartTop02.png">
+            <img class="top" src="/img/temp/cartTop02.png">
         </p>
     </div>
     <!-----------------orderCon------------------->
     <div class="orderCon wrapper clearfix">
+
         <div class="orderL fl">
             <!--------h3---------------->
-            <h3>收件信息<a href="#" class="fr">新增地址</a></h3>
+            <h3>收件信息<a href="/user/address" class="fr">新增地址</a></h3>
             <!--------addres---------------->
             <div class="addres clearfix">
-                <div class="addre fl on">
+                <form id="form">
+                <div class="addre fl" th:each="address: ${addresss}">
                     <div class="tit clearfix">
-                        <p class="fl">张三1
-                            <span class="default">[默认地址]</span>
-                        </p>
-                        <p class="fr">
-                            <a href="#">删除</a>
-                            <span>|</span>
-                            <a href="#" class="edit">编辑</a>
-                        </p>
-                    </div>
-                    <div class="addCon">
-                        <p>河北省&nbsp;唐山市&nbsp;路北区&nbsp;大学生公寓村</p>
-                        <p>15732570937</p>
-                    </div>
-                </div>
-                <div class="addre fl">
-                    <div class="tit clearfix">
-                        <p class="fl">张三2
-                        </p>
-                        <p class="fr">
+                        <p class="fl"> <input type="radio" name="address" th:value="${address.addressId}"><span th:text="${address.addressName}">张三1</span>
 
-                            <a href="#">删除</a>
-                            <span>|</span>
-                            <a href="#" class="edit">编辑</a>
-                        </p>
-                    </div>
-                    <div class="addCon">
-                        <p>河北省&nbsp;唐山市&nbsp;路北区&nbsp;大学生公寓村</p>
-                        <p>15732570937</p>
-                    </div>
-                </div>
-                <div class="addre fl">
-                    <div class="tit clearfix">
-                        <p class="fl">张三3
+<!--                                <span class="default">[默认地址]</span>-->
                         </p>
                         <p class="fr">
-                            <a href="#">删除</a>
-                            <span>|</span>
-                            <a href="#" class="edit">编辑</a>
+                            <a href="/user/address" class="edit1">编辑</a>
                         </p>
                     </div>
                     <div class="addCon">
-                        <p>河北省&nbsp;唐山市&nbsp;路北区&nbsp;大学生公寓村</p>
-                        <p>15732570937</p>
+                        <p th:text="${address.receiverProvince}+' '+${address.receiverCity}+' '+${address.receiverDistrict}+' '+${address.address}">河北省&nbsp;唐山市&nbsp;路北区&nbsp;大学生公寓村</p>
+                        <p th:text="${address.addressTelephone}">15732570937</p>
                     </div>
                 </div>
+                </form>
             </div>
             <!-- <h3>支付方式</h3> -->
             <!--------way---------------->
@@ -124,128 +96,67 @@
             <div class="msg">
                 <h3>订单内容<a href="cart.html" class="fr">返回购物车</a></h3>
                 <!--------ul---------------->
-                <ul class="clearfix">
+                <ul class="clearfix" th:each="cart:${carts}">
                     <li class="fl">
-                        <img src="img/temp/order01.jpg">
+                        <img th:src="${cart.commodity.commodityPicture}" width="88px">
                     </li>
                     <li class="fl">
-                        <p>创意现代简约干花花瓶摆件</p>
+                        <p th:text="${cart.commodity.commodityName}"></p>
                         <br/>
-                        <p>数量：1</p>
+                        <p>数量：<span th:text="${cart.number}"></span></p>
                     </li>
-                    <li class="fr">￥69.90</li>
-                </ul>
-                <ul class="clearfix">
-                    <li class="fl">
-                        <img src="img/temp/order02.jpg">
-                    </li>
-                    <li class="fl">
-                        <p>创意现代简约干花花瓶摆件</p>
-                        <br/>
-                        <p>数量：1</p>
-                    </li>
-                    <li class="fr">￥69.90</li>
+                    <li class="fr">￥<span th:text="${cart.cartPrices}"></span></li>
                 </ul>
             </div>
             <!--------tips---------------->
             <div class="tips">
-                <p><span class="fl">商品金额：</span><span class="fr">￥139.80</span></p>
+                <p><span class="fl">商品金额：</span><span class="fr" th:text="${'￥'+proPrice}"></span></p>
                 <p><span class="fl">运费：</span><span class="fr">免运费</span></p>
             </div>
             <!--------tips count---------------->
             <div class="count tips">
-                <p><span class="fl">合计：</span><span class="fr">￥139.80</span></p>
+                <p><span class="fl">合计：</span><span class="fr" th:text="${'￥'+allPrice}"></span></p>
             </div>
             <!--<input type="button" name="" value="去支付"> -->
-            <a href="ok.html" class="pay">去支付</a>
+            <a onclick="pay()" class="pay">去支付</a>
         </div>
     </div>
-</div>
-<!--编辑弹框-->
-<!--遮罩-->
-<div class="mask"></div>
-<div class="adddz editAddre">
-    <form action="#" method="get">
-        <input type="text" placeholder="姓名" class="on"/>
-        <input type="text" placeholder="手机号"/>
-        <div class="city">
-            <select name="">
-                <option value="省份/自治区">省份/自治区</option>
-            </select>
-            <select>
-                <option value="城市/地区">城市/地区</option>
-            </select>
-            <select>
-                <option value="区/县">区/县</option>
-            </select>
-            <select>
-                <option value="配送区域">配送区域</option>
-            </select>
-        </div>
-        <textarea name="" rows="" cols="" placeholder="详细地址"></textarea>
-        <input type="text" placeholder="邮政编码"/>
-        <div class="bc">
-            <input type="button" value="保存"/>
-            <input type="button" value="取消"/>
-        </div>
-    </form>
 </div>
 <!--返回顶部-->
-<div class="gotop">
-    <a href="cart.html">
-        <dl>
-            <dt><img src="img/gt1.png"/></dt>
-            <dd>去购<br/>物车</dd>
-        </dl>
-    </a>
-    <a href="#" class="dh">
-        <dl>
-            <dt><img src="img/gt2.png"/></dt>
-            <dd>联系<br/>客服</dd>
-        </dl>
-    </a>
-    <a href="mygxin.html">
-        <dl>
-            <dt><img src="img/gt3.png"/></dt>
-            <dd>个人<br/>中心</dd>
-        </dl>
-    </a>
-    <a href="#" class="toptop" style="display: none;">
-        <dl>
-            <dt><img src="img/gt4.png"/></dt>
-            <dd>返回<br/>顶部</dd>
-        </dl>
-    </a>
-    <p>400-800-8200</p>
-</div>
+<th:block th:include="webapp/gotop::gotop"></th:block>
 <!--footer-->
-<div class="footer">
-    <div class="top">
-        <div class="wrapper">
-            <div class="clearfix">
-                <a href="#2" class="fl"><img src="img/foot1.png"/></a>
-                <span class="fl">7天无理由退货</span>
-            </div>
-            <div class="clearfix">
-                <a href="#2" class="fl"><img src="img/foot2.png"/></a>
-                <span class="fl">15天免费换货</span>
-            </div>
-            <div class="clearfix">
-                <a href="#2" class="fl"><img src="img/foot3.png"/></a>
-                <span class="fl">满599包邮</span>
-            </div>
-            <div class="clearfix">
-                <a href="#2" class="fl"><img src="img/foot4.png"/></a>
-                <span class="fl">手机特色服务</span>
-            </div>
-        </div>
-    </div>
-    <p class="dibu">雅阁家居&copy;2013-2017公司版权所有 京ICP备080100-44备0000111000号<br/>
-        违法和不良信息举报电话：188-0130-1238，本网站所列数据，除特殊说明，所有数据均出自我司实验室测试</p>
-</div>
-<script src="js/jquery-1.12.4.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/public.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/pro.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/user.js" type="text/javascript" charset="utf-8"></script>
+<th:block th:replace="webapp/gotop::footer"></th:block>
+<script src="/js/pro.js" type="text/javascript" charset="utf-8"></script>
+<script>
+    //一般直接写在一个js文件中
+    layui.use('layer', function(){
+        var layer = layui.layer;
+    });
+
+    function pay(){
+        if($('input[name=cartId]').val()){
+
+        }
+        console.log($('input[name=cartId]').val())
+         $.ajax(
+            {
+                url:"/order/money",
+                type:"POST",
+                dataType:"json",
+                data:$("#form").serialize(),
+                success:function (result) {
+                    if(result.errorCode == 'success'){
+                        layer.alert(result.msg, {icon: 6});
+                    }
+                    if(result.errorCode == 'fail'){
+                        layer.alert(result.msg, {icon: 5});
+                    }
+                }
+            }
+        )
+    }
+
+</script>
 </body>
+
 </html>
