--- a/src/main/resources/templates/webapp/proDetail.html
+++ b/src/main/resources/templates/webapp/proDetail.html
@@ -3,42 +3,13 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>详情页</title>
-		<link rel="stylesheet" type="text/css" href="css/public.css"/>
-		<link rel="stylesheet" type="text/css" href="css/proList.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/public.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/proList.css"/>
 	</head>
 	<body>
-		<!------------------------------head------------------------------>
-		<div class="head">
-			<div class="wrapper clearfix">
-				<div class="clearfix" id="top">
-					<h1 class="fl"><a href="index.html"><img src="img/logo.png"/></a></h1>
-					<div class="fr clearfix" id="top1">
-						<p class="fl">
-							<a href="#" id="login">登录</a>
-							<a href="#" id="reg">注册</a>
-						</p>
-						<form action="#" method="get" class="fl">
-							<input type="text" placeholder="搜索" />
-							<input type="button" />
-						</form>
-						<div class="btn fl clearfix">
-							<a href="mygxin.html"><img src="img/grzx.png"/></a>
-							<a href="#" class="er1"><img src="img/ewm.png"/></a>
-							<a href="cart.html"><img src="img/gwc.png"/></a>
-							<p><a href="#"><img src="img/smewm.png"/></a></p>
-						</div>
-					</div>
-				</div>
-				<ul class="clearfix" id="bott">
-					<li><a href="index.html">首页</a></li>
-					<li><a href="flowerDer.html">装饰摆件</a></li>
-					<li><a href="decoration.html">布艺软饰</a></li>
-					<li><a href="paint.html">墙式壁挂</a></li>
-					<li><a href="perfume.html">蜡艺香薰</a></li>
-					<li><a href="idea.html">创意家居</a></li>
-				</ul>
-			</div>
-		</div>
+	<th:block th:include="webapp/link::link"></th:block>
+	<!------------------------------head------------------------------>
+	<th:block th:include="webapp/head::head"></th:block>
 		<!-----------------address------------------------------->
 		<div class="address">
 			<div class="wrapper clearfix">
@@ -48,7 +19,7 @@
 				<span>/</span>
 				<a href="proList.html">干花花艺</a>
 				<span>/</span>
-				<a href="#" class="on">【雅阁】非洲菊仿真花干花</a>
+				<a href="#" class="on" th:text="${commidty.commodityName}">/a>
 			</div>
 		</div>
 		<!-----------------------Detail------------------------------>
@@ -56,34 +27,34 @@
 			<div class="proDet wrapper">
 				<div class="proCon clearfix">
 					<div class="proImg fl">
-						<img class="det" src="img/temp/proDet.jpg" />
+						<img class="det" src="/img/temp/proDet.jpg" />
 						<div class="smallImg clearfix">
-							<img src="img/temp/proDet01.jpg" data-src="img/temp/proDet01_big.jpg">
-							<img src="img/temp/proDet02.jpg" data-src="img/temp/proDet02_big.jpg">
-							<img src="img/temp/proDet03.jpg" data-src="img/temp/proDet03_big.jpg">
-							<img src="img/temp/proDet04.jpg" data-src="img/temp/proDet04_big.jpg">
+							<img th:src="${commidty.commodityPicture}" th:data-src="${commidty.commodityPicture}">
+							<img src="/img/temp/proDet02.jpg" data-src="/img/temp/proDet02_big.jpg">
+							<img src="/img/temp/proDet03.jpg" data-src="/img/temp/proDet03_big.jpg">
+							<img src="/img/temp/proDet04.jpg" data-src="/img/temp/proDet04_big.jpg">
 						</div>
 					</div>
 					<div class="fr intro">
 						<div class="title">
-							<h4>【雅阁】非洲菊仿真花干花</h4>
+							<h4 th:text="${commidty.commodityName}" >【雅阁】非洲菊仿真花干花</h4>
 							<p>【破损补寄】【适合放室内、卧室、书房、餐桌、办公室、客厅、电视柜等地方】【无理由退换货】【包邮】</p>
-							<span>￥59.90</span>
+							<span th:text="'￥'+${commidty.price}" >59.90</span>
 						</div>
 						<div class="proIntro">
 
-							<p>上架时间：<span>202011-18</span></p>
-							<p>库存数量：<span>2096</span>件</p>
+							<p>上架时间：<span th:text="${commidty.launchTime}">202011-18</span></p>
+							<p>库存数量：<span th:text="${commidty.stock}">2096</span>件</p>
 							<div class="num clearfix">
-								<img class="fl sub" src="img/temp/sub.jpg">
-								<span class="fl" contentEditable="true">1</span>
-								<img class="fl add" src="img/temp/add.jpg">
+								<img class="fl sub" src="/img/temp/sub.jpg">
+								<span class="fl" contentEditable="true" id="number">1</span>
+								<img class="fl add" src="/img/temp/add.jpg">
 
 							</div>
 						</div>
 						<div class="btns clearfix">
-							<a href="order.html"><p class="buy fl">立即购买</p></a>
-							<a href="cart.html"><p class="cart fr">加入购物车</p></a>
+							<a href="javascript:void(0)" onclick="buyNow()"><p class="buy fl">立即购买</p></a>
+							<a href="javascript:void(0)" onclick="addcart()"><p class="cart fr">加入购物车</p></a>
 						</div>
 					</div>
 				</div>
@@ -97,32 +68,55 @@
 				</div>
 				<div class="msgAll">
 					<div class="msgImgs">
-						<img src="img/temp/det01.jpg">
-						<img src="img/temp/det02.jpg">
-						<img src="img/temp/det03.jpg">
-						<img src="img/temp/det04.jpg">
-						<img src="img/temp/det05.jpg">
-						<img src="img/temp/det06.jpg">
-						<img src="img/temp/det07.jpg">
+						<img th:src="${commidty.commodityPicture}">
+						<img src="/img/temp/det02.jpg">
+						<img src="/img/temp/det03.jpg">
+						<img src="/img/temp/det04.jpg">
+						<img src="/img/temp/det05.jpg">
+						<img src="/img/temp/det06.jpg">
+						<img src="/img/temp/det07.jpg">
 					</div>
 					<div class="eva">
 						<div class="per clearfix">
-							<img class="fl" src="img/temp/per01.jpg">
+							<img class="fl" src="/img/temp/per01.jpg">
 							<div class="perR fl">
 								<p>馨***呀</p>
 								<p>不好意思评价晚了，产品很好，价格比玻璃品便宜，没有我担心的杂色，发货快，包装好，全5分</p>
 								<div class="clearfix">
-									<p><img src="img/temp/eva01.jpg"></p>
-									<p><img src="img/temp/eva02.jpg"></p>
-									<p><img src="img/temp/eva03.jpg"></p>
-									<p><img src="img/temp/eva04.jpg"></p>
-									<p><img src="img/temp/eva05.jpg"></p>
+									<p><img src="/img/temp/eva01.jpg"></p>
+									<p><img src="/img/temp/eva02.jpg"></p>
+									<p><img src="/img/temp/eva03.jpg"></p>
+									<p><img src="/img/temp/eva04.jpg"></p>
+									<p><img src="/img/temp/eva05.jpg"></p>
 								</div>
 								<p><span>2016年12月27日08:31</span></p>
 							</div>
 						</div>
 						<div class="per clearfix">
-							<img class="fl" src="img/temp/per02.jpg">
+							<img class="fl" src="/img/temp/per02.jpg">
+							<div class="perR fl">
+								<p>么***周</p>
+								<p>花瓶超级棒，我看图以为是光面的，收货发现是磨砂，但感觉也超有质感，很喜欢。磨砂上面还有点纹路，不过觉得挺自然的，不影响美观。包装也很好，绝对不会磕碎碰坏，好评！</p>
+								<p><span>2016年12月27日08:31</span></p>
+							</div>
+						</div>
+						<div class="per clearfix">
+							<img class="fl" src="/img/temp/per01.jpg">
+							<div class="perR fl">
+								<p>馨***呀</p>
+								<p>不好意思评价晚了，产品很好，价格比玻璃品便宜，没有我担心的杂色，发货快，包装好，全5分</p>
+								<div class="clearfix">
+									<p><img src="/img/temp/eva01.jpg"></p>
+									<p><img src="/img/temp/eva02.jpg"></p>
+									<p><img src="/img/temp/eva03.jpg"></p>
+									<p><img src="/img/temp/eva04.jpg"></p>
+									<p><img src="/img/temp/eva05.jpg"></p>
+								</div>
+								<p><span>2016年12月27日08:31</span></p>
+							</div>
+						</div>
+						<div class="per clearfix">
+							<img class="fl" src="/img/temp/per02.jpg">
 							<div class="perR fl">
 								<p>么***周</p>
 								<p>花瓶超级棒，我看图以为是光面的，收货发现是磨砂，但感觉也超有质感，很喜欢。磨砂上面还有点纹路，不过觉得挺自然的，不影响美观。包装也很好，绝对不会磕碎碰坏，好评！</p>
@@ -135,17 +129,17 @@
 								<p>馨***呀</p>
 								<p>不好意思评价晚了，产品很好，价格比玻璃品便宜，没有我担心的杂色，发货快，包装好，全5分</p>
 								<div class="clearfix">
-									<p><img src="img/temp/eva01.jpg"></p>
-									<p><img src="img/temp/eva02.jpg"></p>
-									<p><img src="img/temp/eva03.jpg"></p>
-									<p><img src="img/temp/eva04.jpg"></p>
-									<p><img src="img/temp/eva05.jpg"></p>
+									<p><img src="/img/temp/eva01.jpg"></p>
+									<p><img src="/img/temp/eva02.jpg"></p>
+									<p><img src="/img/temp/eva03.jpg"></p>
+									<p><img src="/img/temp/eva04.jpg"></p>
+									<p><img src="/img/temp/eva05.jpg"></p>
 								</div>
 								<p><span>2016年12月27日08:31</span></p>
 							</div>
 						</div>
 						<div class="per clearfix">
-							<img class="fl" src="img/temp/per02.jpg">
+							<img class="fl" src="/img/temp/per02.jpg">
 							<div class="perR fl">
 								<p>么***周</p>
 								<p>花瓶超级棒，我看图以为是光面的，收货发现是磨砂，但感觉也超有质感，很喜欢。磨砂上面还有点纹路，不过觉得挺自然的，不影响美观。包装也很好，绝对不会磕碎碰坏，好评！</p>
@@ -153,22 +147,22 @@
 							</div>
 						</div>
 						<div class="per clearfix">
-							<img class="fl" src="img/temp/per01.jpg">
+							<img class="fl" src="/img/temp/per01.jpg">
 							<div class="perR fl">
 								<p>馨***呀</p>
 								<p>不好意思评价晚了，产品很好，价格比玻璃品便宜，没有我担心的杂色，发货快，包装好，全5分</p>
 								<div class="clearfix">
-									<p><img src="img/temp/eva01.jpg"></p>
-									<p><img src="img/temp/eva02.jpg"></p>
-									<p><img src="img/temp/eva03.jpg"></p>
-									<p><img src="img/temp/eva04.jpg"></p>
-									<p><img src="img/temp/eva05.jpg"></p>
+									<p><img src="/img/temp/eva01.jpg"></p>
+									<p><img src="/img/temp/eva02.jpg"></p>
+									<p><img src="/img/temp/eva03.jpg"></p>
+									<p><img src="/img/temp/eva04.jpg"></p>
+									<p><img src="/img/temp/eva05.jpg"></p>
 								</div>
 								<p><span>2016年12月27日08:31</span></p>
 							</div>
 						</div>
 						<div class="per clearfix">
-							<img class="fl" src="img/temp/per02.jpg">
+							<img class="fl" src="/img/temp/per02.jpg">
 							<div class="perR fl">
 								<p>么***周</p>
 								<p>花瓶超级棒，我看图以为是光面的，收货发现是磨砂，但感觉也超有质感，很喜欢。磨砂上面还有点纹路，不过觉得挺自然的，不影响美观。包装也很好，绝对不会磕碎碰坏，好评！</p>
@@ -176,45 +170,22 @@
 							</div>
 						</div>
 						<div class="per clearfix">
-							<img class="fl" src="img/temp/per01.jpg">
+							<img class="fl" src="/img/temp/per01.jpg">
 							<div class="perR fl">
 								<p>馨***呀</p>
 								<p>不好意思评价晚了，产品很好，价格比玻璃品便宜，没有我担心的杂色，发货快，包装好，全5分</p>
 								<div class="clearfix">
-									<p><img src="img/temp/eva01.jpg"></p>
-									<p><img src="img/temp/eva02.jpg"></p>
-									<p><img src="img/temp/eva03.jpg"></p>
-									<p><img src="img/temp/eva04.jpg"></p>
-									<p><img src="img/temp/eva05.jpg"></p>
+									<p><img src="/img/temp/eva01.jpg"></p>
+									<p><img src="/img/temp/eva02.jpg"></p>
+									<p><img src="/img/temp/eva03.jpg"></p>
+									<p><img src="/img/temp/eva04.jpg"></p>
+									<p><img src="/img/temp/eva05.jpg"></p>
 								</div>
 								<p><span>2016年12月27日08:31</span></p>
 							</div>
 						</div>
 						<div class="per clearfix">
-							<img class="fl" src="img/temp/per02.jpg">
-							<div class="perR fl">
-								<p>么***周</p>
-								<p>花瓶超级棒，我看图以为是光面的，收货发现是磨砂，但感觉也超有质感，很喜欢。磨砂上面还有点纹路，不过觉得挺自然的，不影响美观。包装也很好，绝对不会磕碎碰坏，好评！</p>
-								<p><span>2016年12月27日08:31</span></p>
-							</div>
-						</div>
-						<div class="per clearfix">
-							<img class="fl" src="img/temp/per01.jpg">
-							<div class="perR fl">
-								<p>馨***呀</p>
-								<p>不好意思评价晚了，产品很好，价格比玻璃品便宜，没有我担心的杂色，发货快，包装好，全5分</p>
-								<div class="clearfix">
-									<p><img src="img/temp/eva01.jpg"></p>
-									<p><img src="img/temp/eva02.jpg"></p>
-									<p><img src="img/temp/eva03.jpg"></p>
-									<p><img src="img/temp/eva04.jpg"></p>
-									<p><img src="img/temp/eva05.jpg"></p>
-								</div>
-								<p><span>2016年12月27日08:31</span></p>
-							</div>
-						</div>
-						<div class="per clearfix">
-							<img class="fl" src="img/temp/per02.jpg">
+							<img class="fl" src="/img/temp/per02.jpg">
 							<div class="perR fl">
 								<p>么***周</p>
 								<p>花瓶超级棒，我看图以为是光面的，收货发现是磨砂，但感觉也超有质感，很喜欢。磨砂上面还有点纹路，不过觉得挺自然的，不影响美观。包装也很好，绝对不会磕碎碰坏，好评！</p>
@@ -229,28 +200,28 @@
 				<div class="seeList">
 					<a href="#">
 						<dl>
-							<dt><img src="img/temp/see01.jpg"></dt>
+							<dt><img src="/img/temp/see01.jpg"></dt>
 							<dd>【雅阁】复古文艺风玻璃花瓶</dd>
 							<dd>￥193.20</dd>
 						</dl>
 					</a>
 					<a href="#">
 						<dl>
-							<dt><img src="img/temp/see02.jpg"></dt>
+							<dt><img src="/img/temp/see02.jpg"></dt>
 							<dd>【雅阁】复古文艺风玻璃花瓶</dd>
 							<dd>￥193.20</dd>
 						</dl>
 					</a>
 					<a href="#">
 						<dl>
-							<dt><img src="img/temp/see03.jpg"></dt>
+							<dt><img src="/img/temp/see03.jpg"></dt>
 							<dd>【雅阁】复古文艺风玻璃花瓶</dd>
 							<dd>￥193.20</dd>
 						</dl>
 					</a>
 					<a href="#">
 						<dl>
-							<dt><img src="img/temp/see04.jpg"></dt>
+							<dt><img src="/img/temp/see04.jpg"></dt>
 							<dd>【雅阁】复古文艺风玻璃花瓶</dd>
 							<dd>￥193.20</dd>
 						</dl>
@@ -263,43 +234,43 @@
 			<h4>猜你喜欢</h4>
 			<div class="bottom">
 				<div class="hd">
-					<span class="prev"><img src="img/temp/prev.png"></span>
-					<span class="next"><img src="img/temp/next.png"></span>
+					<span class="prev"><img src="/img/temp/prev.png"></span>
+					<span class="next"><img src="/img/temp/next.png"></span>
 				</div>
 				<div class="imgCon bd">
 					<div class="likeList clearfix">
 						<div>
 							<a href="proDetail.html">
 								<dl>
-									<dt><img src="img/temp/like01.jpg"></dt>
+									<dt><img src="/img/temp/like01.jpg"></dt>
 									<dd>【雅阁】复古文艺风玻璃花瓶</dd>
 									<dd>￥193.20</dd>
 								</dl>
 							</a>
 							<a href="proDetail.html">
 								<dl>
-									<dt><img src="img/temp/like02.jpg"></dt>
+									<dt><img src="/img/temp/like02.jpg"></dt>
 									<dd>【雅阁】复古文艺风玻璃花瓶</dd>
 									<dd>￥193.20</dd>
 								</dl>
 							</a>
 							<a href="proDetail.html">
 								<dl>
-									<dt><img src="img/temp/like03.jpg"></dt>
+									<dt><img src="/img/temp/like03.jpg"></dt>
 									<dd>【雅阁】复古文艺风玻璃花瓶</dd>
 									<dd>￥193.20</dd>
 								</dl>
 							</a>
 							<a href="proDetail.html">
 								<dl>
-									<dt><img src="img/temp/like04.jpg"></dt>
+									<dt><img src="/img/temp/like04.jpg"></dt>
 									<dd>【雅阁】复古文艺风玻璃花瓶</dd>
 									<dd>￥193.20</dd>
 								</dl>
 							</a>
 							<a href="proDetail.html" class="last">
 								<dl>
-									<dt><img src="img/temp/like05.jpg"></dt>
+									<dt><img src="/img/temp/like05.jpg"></dt>
 									<dd>【雅阁】复古文艺风玻璃花瓶</dd>
 									<dd>￥193.20</dd>
 								</dl>
@@ -308,28 +279,28 @@
 						<div>
 							<a href="proDetail.html">
 								<dl>
-									<dt><img src="img/temp/like01.jpg"></dt>
+									<dt><img src="/img/temp/like01.jpg"></dt>
 									<dd>【雅阁】复古文艺风玻璃花瓶</dd>
 									<dd>￥193.20</dd>
 								</dl>
 							</a>
 							<a href="proDetail.html">
 								<dl>
-									<dt><img src="img/temp/like02.jpg"></dt>
+									<dt><img src="/img/temp/like02.jpg"></dt>
 									<dd>【雅阁】复古文艺风玻璃花瓶</dd>
 									<dd>￥193.20</dd>
 								</dl>
 							</a>
 							<a href="proDetail.html">
 								<dl>
-									<dt><img src="img/temp/like03.jpg"></dt>
+									<dt><img src="/img/temp/like03.jpg"></dt>
 									<dd>【雅阁】复古文艺风玻璃花瓶</dd>
 									<dd>￥193.20</dd>
 								</dl>
 							</a>
 							<a href="proDetail.html">
 								<dl>
-									<dt><img src="img/temp/like04.jpg"></dt>
+									<dt><img src="/img/temp/like04.jpg"></dt>
 									<dd>【雅阁】复古文艺风玻璃花瓶</dd>
 									<dd>￥193.20</dd>
 								</dl>
@@ -347,68 +318,73 @@
 			</div>
 		</div>
 		<!--返回顶部-->
-		<div class="gotop">
-			<a href="cart.html">
-			<dl class="goCart">
-				<dt><img src="img/gt1.png"/></dt>
-				<dd>去购<br />物车</dd>
-				<!--<span>1</span>-->
-			</dl>
-			</a>
-			<a href="#" class="dh">
-			<dl>
-				<dt><img src="img/gt2.png"/></dt>
-				<dd>联系<br />客服</dd>
-			</dl>
-			</a>
-			<a href="mygxin.html">
-			<dl>
-				<dt><img src="img/gt3.png"/></dt>
-				<dd>个人<br />中心</dd>
-			</dl>
-			</a>
-			<a href="#" class="toptop" style="display: none;">
-			<dl>
-				<dt><img src="img/gt4.png"/></dt>
-				<dd>返回<br />顶部</dd>
-			</dl>
-			</a>
-			<p>400-800-8200</p>
-		</div>
-		<div class="msk"></div>
+	<th:block th:replace="webapp/gotop::gotop"></th:block>
 		<!--footer-->
-		<div class="footer">
-			<div class="top">
-				<div class="wrapper">
-					<div class="clearfix">
-						<a href="#2" class="fl"><img src="img/foot1.png"/></a>
-						<span class="fl">7天无理由退货</span>
-					</div>
-					<div class="clearfix">
-						<a href="#2" class="fl"><img src="img/foot2.png"/></a>
-						<span class="fl">15天免费换货</span>
-					</div>
-					<div class="clearfix">
-						<a href="#2" class="fl"><img src="img/foot3.png"/></a>
-						<span class="fl">满599包邮</span>
-					</div>
-					<div class="clearfix">
-						<a href="#2" class="fl"><img src="img/foot4.png"/></a>
-						<span class="fl">手机特色服务</span>
-					</div>
-				</div>
-			</div>
-			<p class="dibu">雅阁家居&copy;2013-2017公司版权所有 京ICP备080100-44备0000111000号<br />
-			违法和不良信息举报电话：188-0130-1238，本网站所列数据，除特殊说明，所有数据均出自我司实验室测试</p>
-		</div>
-		<script src="js/jquery-1.12.4.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/jquery.SuperSlide.2.1.1.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/public.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/nav.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/pro.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/cart.js" type="text/javascript" charset="utf-8"></script>
+	<th:block th:replace="webapp/gotop::footer"></th:block>
+		<script src="/js/jquery.SuperSlide.2.1.1.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/js/nav.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/js/pro.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/js/cart.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			jQuery(".bottom").slide({titCell:".hd ul",mainCell:".bd .likeList",autoPage:true,autoPlay:false,effect:"leftLoop",autoPlay:true,vis:1});
+		</script>
+		<script>
+				layui.use('layer', function(){
+					var layer = layui.layer;
+				});
+
+				//加入购物车
+				function addcart() {
+					var number =  $("#number").text();
+					$.ajax(
+							{
+								url:"/cart/add",
+								type:"POST",
+								dataType:"json",
+								data:{
+									number:number,
+									userId:"[[${#session.getAttribute('user_session').userId}]]",
+									commid:"[[${commidty.commodityId}]]"
+								},
+								success:function (result) {
+									if(result.errorCode == 'success'){
+										layer.confirm("是否前往购物车页面？", {icon: 6, title:result.msg}, function(index){
+											window.location.href = "/cart/index";
+											layer.close(index);
+										});
+									}
+									if(result.errorCode == 'fail'){
+										layer.alert(result.msg, {icon: 5});
+									}
+								}
+							}
+					)
+				}
+
+				//立即购买
+				function buyNow() {
+					var number =  $("#number").text();
+					$.ajax(
+							{
+								url:"/order/buy",
+								type:"POST",
+								dataType:"json",
+								data:{
+									number:number,
+									userId:"[[${#session.getAttribute('user_session').userId}]]",
+									commid:"[[${commidty.commodityId}]]"
+								},
+								success:function (result) {
+									if(result.errorCode == 'success'){
+											window.location.href = "/order/pay/"+result.data;
+									}
+									if(result.errorCode == 'fail'){
+										layer.alert(result.msg, {icon: 5});
+									}
+								}
+							}
+					)
+				}
 		</script>
 	</body>
 </html>
