--- a/src/main/resources/templates/webapp/remima.html
+++ b/src/main/resources/templates/webapp/remima.html
@@ -3,42 +3,13 @@
 	<head lang="en">
 		<meta charset="utf-8" />
 		<title>个人信息</title>
-		<link rel="stylesheet" type="text/css" href="css/public.css"/>
-		<link rel="stylesheet" type="text/css" href="css/mygrxx.css" />
+		<link rel="stylesheet" type="text/css" href="/css/public.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/mygrxx.css" />
 	</head>
 	<body>
+	<th:block th:include="webapp/link::link"></th:block>
 		<!------------------------------head------------------------------>
-		<div class="head ding">
-			<div class="wrapper clearfix">
-				<div class="clearfix" id="top">
-					<h1 class="fl"><a href="index.html"><img src="img/logo.png"/></a></h1>
-					<div class="fr clearfix" id="top1">
-						<p class="fl">
-							<a href="#" id="login">登录</a>
-							<a href="#" id="reg">注册</a>
-						</p>
-						<form action="#" method="get" class="fl">
-							<input type="text" placeholder="搜索" />
-							<input type="button" />
-						</form>
-						<div class="btn fl clearfix">
-							<a href="mygxin.html"><img src="img/grzx.png"/></a>
-							<a href="#" class="er1"><img src="img/ewm.png"/></a>
-							<a href="cart.html"><img src="img/gwc.png"/></a>
-							<p><a href="#"><img src="img/smewm.png"/></a></p>
-						</div>
-					</div>
-				</div>
-				<ul class="clearfix" id="bott">
-					<li><a href="index.html">首页</a></li>
-					<li><a href="flowerDer.html">装饰摆件</a></li>
-					<li><a href="decoration.html">布艺软饰</a></li>
-					<li><a href="paint.html">墙式壁挂</a></li>
-					<li><a href="perfume.html">蜡艺香薰</a></li>
-					<li><a href="idea.html">创意家居</a></li>
-				</ul>
-			</div>
-		</div>
+	<th:block th:include="webapp/head::userhead"></th:block>
 		<!------------------------------idea------------------------------>
 		<div class="address mt">
 			<div class="wrapper clearfix">
@@ -53,39 +24,40 @@
 			<div class="wrapper clearfix">
 				<div class="zuo fl">
 					<h3>
-						<a href="#"><img src="img/tx.png"/></a>
-						<p class="clearfix"><span class="fl">[羊羊羊]</span><span class="fr">[退出登录]</span></p>
+						<a href="#"><img src="/img/tx.png"/></a>
+						<p class="clearfix"><span class="fl" th:text="${'['+#session.getAttribute('user_session').userName}+']'"></span><span class="fr">[退出登录]</span></p>
 					</h3>
 					<div>
 						<h4>我的交易</h4>
 						<ul>
-							<li><a href="cart.html">我的购物车</a></li>
+							<li><a href="/cart/index">我的购物车</a></li>
 							<li><a href="myorderq.html">我的订单</a></li>
 							<li><a href="myprod.html">评价晒单</a></li>
 						</ul>
 						<h4>个人中心</h4>
 						<ul>
-							<li><a href="mygxin.html">我的中心</a></li>
-							<li><a href="address.html">地址管理</a></li>
+							<li  class="on"><a href="/user/index">我的中心</a></li>
+							<li><a href="/user/address">地址管理</a></li>
 						</ul>
 						<h4>账户管理</h4>
 						<ul>
-							<li><a href="mygrxx.html">个人信息</a></li>
-							<li  class="on"><a href="remima.html">修改密码</a></li>
+							<li><a href="/user/info">个人信息</a></li>
+							<li><a href="/user/pass">修改密码</a></li>
 						</ul>
 					</div>
 				</div>
+
 				<div class="you fl">
 					<h2>修改密码</h2>
-					<form action="#" method="get" class="remima">
+					<form id="form" action="#" method="get" class="remima">
 						<p><span>选择验证身份方式：</span><input type="checkbox" />密码验证  <input type="checkbox" />邮箱验证 </p>
-						<p><span>原密码：</span><input type="text" /></p>
+						<p><span>原密码：</span><input name="password" type="text" /></p>
 						<p class="op">输入原密码</p>
-						<p><span>新密码：</span><input type="text" /></p>
+						<p><span>新密码：</span><input name="newpass" type="text" /></p>
 						<p class="op">6-16 个字符，需使用字母、数字或符号组合，不能使用纯数字、纯字母、纯符号</p>
-						<p><span>重复新密码：</span><input type="text" /></p>
+						<p><span>重复新密码：</span><input name="renewpass" type="text" /></p>
 						<p class="op">请再次输入密码</p>
-						<p><span>验证码：</span><input type="text" /><img src="img/temp/code.jpg" alt="" /></p>
+						<p><span>验证码：</span><input type="text" /><img src="/img/temp/code.jpg" alt="" /></p>
 						<p class="op">按右图输入验证码，不区分大小写</p>
 						<input type="submit" value="提交" />
 					</form>
@@ -94,60 +66,94 @@
 		</div>
 		
 		<!--返回顶部-->
-		<div class="gotop">
-			<a href="cart.html">
-			<dl>
-				<dt><img src="img/gt1.png"/></dt>
-				<dd>去购<br />物车</dd>
-			</dl>
-			</a>
-			<a href="#" class="dh">
-			<dl>
-				<dt><img src="img/gt2.png"/></dt>
-				<dd>联系<br />客服</dd>
-			</dl>
-			</a>
-			<a href="mygxin.html">
-			<dl>
-				<dt><img src="img/gt3.png"/></dt>
-				<dd>个人<br />中心</dd>
-			</dl>
-			</a>
-			<a href="#" class="toptop" style="display: none">
-			<dl>
-				<dt><img src="img/gt4.png"/></dt>
-				<dd>返回<br />顶部</dd>
-			</dl>
-			</a>
-			<p>400-800-8200</p>
-		</div>
+	<th:block th:replace="webapp/gotop::gotop"></th:block>
 		<!--footer-->
-		<div class="footer">
-			<div class="top">
-				<div class="wrapper">
-					<div class="clearfix">
-						<a href="#2" class="fl"><img src="img/foot1.png"/></a>
-						<span class="fl">7天无理由退货</span>
-					</div>
-					<div class="clearfix">
-						<a href="#2" class="fl"><img src="img/foot2.png"/></a>
-						<span class="fl">15天免费换货</span>
-					</div>
-					<div class="clearfix">
-						<a href="#2" class="fl"><img src="img/foot3.png"/></a>
-						<span class="fl">满599包邮</span>
-					</div>
-					<div class="clearfix">
-						<a href="#2" class="fl"><img src="img/foot4.png"/></a>
-						<span class="fl">手机特色服务</span>
-					</div>
-				</div>
-			</div>
-			<p class="dibu">雅阁家居&copy;2013-2017公司版权所有 京ICP备080100-44备0000111000号<br />
-			违法和不良信息举报电话：400-800-8200，本网站所列数据，除特殊说明，所有数据均出自我司实验室测试</p>
-		</div>
-		<script src="js/jquery-1.12.4.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/public.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/user.js" type="text/javascript" charset="utf-8"></script>
+	<th:block th:replace="webapp/gotop::footer"></th:block>
+	<script src="http://static.runoob.com/assets/jquery-validation-1.14.0/dist/jquery.validate.min.js"></script>
+	<script>
+		//一般直接写在一个js文件中
+		layui.use('layer', function(){
+			var layer = layui.layer;
+		});
+		//电话号码
+		$.validator.addMethod("testPass",function(value,element,params){
+			var reg = /^[0-9a-zA-Z_]{1,}$/;
+			if(reg.test(value))
+				return true;
+			return false;
+		},"密码格式不正确");
+		$.validator.addMethod("testold",function(value,element,params){
+			var old = $("input[name=password]").val();
+			if(old == value)
+				return false;
+			return true;
+		},"新密码不能与旧密码一致");
+
+		$().ready(function() {
+			// 在键盘按下并释放及提交后验证提交表单
+			$("#form").validate({
+				rules: {
+					password: {
+						required: true,
+						minlength: 6,
+						maxlength:16
+					},
+					newpass: {
+						required: true,
+						minlength: 6,
+						maxlength:16,
+						testold:true,
+						testPass:true,
+					},
+					renewpass: {
+						required: true,
+						minlength: 6,
+						maxlength:16,
+						testPass: true,
+						equalTo:"input[name=newpass]"
+					},
+				},
+				messages: {
+					password: {
+						required: "密码不能为空",
+						minlength: "密码最少输入6个",
+						maxlength:"密码最多输入16个"
+					},
+					newpass: {
+						required: "确认密码不能为空",
+						minlength: "密码最少输入6个",
+						maxlength:"密码最多输入16个"
+					},
+					renewpass: {
+						required: "电话号码不能为空",
+						equalTo:"两次密码输入不一致",
+						minlength: "密码最少输入6个",
+						maxlength:"密码最多输入16个"
+					},
+				}
+				,
+				submitHandler:function(form){
+					$.ajax(
+							{
+								url:"/user/change/pass",
+								type:"POST",
+								dataType:"json",
+								data:$("#form").serialize()+"&userId=[[${#session.getAttribute('user_session').userId}]]"+"&username=[[${#session.getAttribute('user_session').userName}]]",
+								success:function (result) {
+									if(result.errorCode == 'success'){
+										layer.alert(result.msg+",请重新登录哦！！", {icon: 6},function () {
+											window.location.href = "/user/login";
+										});
+									}
+									if(result.errorCode == 'fail'){
+										layer.alert(result.msg, {icon: 5});
+									}
+								}
+							}
+					)
+				}
+			})
+		});
+	</script>
 	</body>
 </html>
